@@ -2,6 +2,6 @@ AUX xfce4-mixer-4.4.3-i18n-typo.patch 338 RMD160 114747cb6a25286a4091df8e784eb99
 DIST xfce4-mixer-4.4.3.tar.bz2 483417 RMD160 004d3bc6f74e9bc6ed3c1f8b9555972e55dfb8e2 SHA1 33549a5adae984e36f77a50be0d4d67df3fc82bb SHA256 4104acd9bd09e675765ceac88a10d8e0b920f50856fa571409fa51fa6a084554
 DIST xfce4-mixer-4.6.1.tar.bz2 412483 RMD160 1fd6c450967a87c28082f960de3659633b876efe SHA1 e86163782fc4fc31671c7cb212d23d34106ad3af SHA256 cf7b8af6696b0e3795ab65d15a8b5d217123955919713f7bae86008b56abb5dd
 EBUILD xfce4-mixer-4.4.3.ebuild 1249 RMD160 d36ad19891aa9505a1e98ce256acb5e13ca274d8 SHA1 af4c58fedab5037439d7b801f2aafffb9c820d1b SHA256 ba5d6249dfa939a8fc89d05971a61fd34d5de0e47591528973b305725b444578
-EBUILD xfce4-mixer-4.6.1.ebuild 882 RMD160 03cf54aaffb2d2dd1efbff72a0fa52dcd042feb5 SHA1 d60f15c400000a157cd01fa566b9c69d2f1c5de4 SHA256 d41b39b442a893b6949d559ce6dd13535d73e2c096f9bd7c0e17049ad693c0c6
-MISC ChangeLog 14906 RMD160 ae6f9906c8fcac1592efc2c9a1917a9835ddfd6a SHA1 cbb678b1c1d73a332f2eb6a666d73edbc64c6a42 SHA256 b70a56366b258a4d75c45a8bd7b2609bd25eb2caab0b48c92fa60b76fda3ca5e
-MISC metadata.xml 157 RMD160 d7470fe88d1b96f3a7f1ef26fb7dc646b4a1b907 SHA1 7eae91f2588bdae8667d37a98fb3090d539eeca1 SHA256 44350daa7594842894d676413708d8ea77ccb0017bed24711af5b256281f5e61
+EBUILD xfce4-mixer-4.6.1.ebuild 987 RMD160 466469d5a01cd1bfd1b6cc3d786b69465431817e SHA1 77c9b15b0ee3ea6bdcd45f2e275587256d96dbe4 SHA256 7404ea4b5adb9a4c8f546c122ed93b4907c6494e846a19fe562ae3f8ddc164e5
+MISC ChangeLog 15013 RMD160 5dd2acbcc4d944a951591767235b2bbaccd2a49c SHA1 b304102d56a29bab7ce9cdbe2c5b40373a25f789 SHA256 a862e22cb98f25d84c97ede62889ab31bf07e938f1c3b586d8c25d4ae9e61b5e
+MISC metadata.xml 159 RMD160 43722935bd7b4db7fe8db681054f2e53c4a5f7ce SHA1 15958ad72e234ba572c9534533c21532eb6bc0fd SHA256 900ea49b6703fce452e205b85226bf1f994725963e5840da501182e7487d0e63
