@@ -1,6 +1,10 @@
 # ChangeLog for xfce-extra/xfce4-mixer
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfce4-mixer/ChangeLog,v 1.123 2009/07/27 17:51:41 nixnut Exp $
+# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfce4-mixer/ChangeLog,v 1.124 2009/08/25 14:29:28 ssuominen Exp $
+
+  25 Aug 2009; Samuli Suominen <ssuominen@gentoo.org>
+  xfce4-mixer-4.6.1.ebuild:
+  Use xfconf.eclass.
 
   27 Jul 2009; nixnut <nixnut@gentoo.org> xfce4-mixer-4.6.1.ebuild:
   ppc stable #265587
